--- a/src/main/webapp/assets/css/estilo_panel_administrador.css
+++ b/src/main/webapp/assets/css/estilo_panel_administrador.css
@@ -97,7 +97,7 @@ main {
 }
 
 .action {
-	position: fixed;
+	position: absolute;
 	right: 30px;
 }
 
@@ -133,6 +133,7 @@ main {
 	align-items: center;
 	visibility: hidden;
 	opacity: 0;
+	z-index:100;
 }
 
 .action .mostrar-menu-usuario {
@@ -143,6 +144,7 @@ main {
 .action .menu-usuario::after {
 	content: '';
 	position: absolute;
+	display:inline-block;
 	top: -3px;
 	right: 28px;
 	width: 20px;
